<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/criar_novo_produto"
        android:layout_margin= "50sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        />
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/novo_produto"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginBottom="10sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:id="@+id/novo_produto_nome"
        />
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Quantidade:"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginBottom="10sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:id="@+id/novo_produto_quantidade"
        />
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco_novo_produto"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginBottom="10sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:id="@+id/novo_produto_preco"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/create_product_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/criar_produto_button"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:gravity="center">
        <TextView
            android:id="@+id/title_nome_produto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/nome_produto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:gravity="center">
        <TextView
            android:id="@+id/title_codigo_produto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/codigo_produto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:gravity="center">
        <TextView
            android:id="@+id/title_quantidade_produto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"

            />
        <TextView
            android:id="@+id/quantidade_produto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:gravity="center">
        <TextView
            android:id="@+id/title_preco_produto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/preco_produto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:inputType="number"/>
    </LinearLayout>

</LinearLayout>